--- a/matte.html
+++ b/matte.html
@@ -35,6 +35,44 @@
 
 </table>
 
+<table style="padding-top: 150px;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+    <tr>
+        <th style="width:20%"><img class = "myImages" id="myImg" src="Images/berlin1.jpg" style="width: 100%"></th>
+        <th style="width:20%"><img class = "myImages" id="myImg" src="Images/lisbon1.jpg" style="width: 100%"></th>
+        <th style="width:20%"><img class = "myImages" id="myImg" src="Images/vans.jpg" style="width: 100%"></th>
+        <th style="width:20%"><img class = "myImages" id="myImg" src="Images/lisbon2.jpg" style="width: 100%"></th>
+        <th style="width:20%"><img class = "myImages" id="myImg" src="Images/berlin2.jpg" style="width: 100%"></th>
+    </tr>
+</table>
+
+<table style="padding-top: 50px;padding-bottom: 200px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+    <tr>
+        <th style="width:7.8%"><img class = "myImages" id="myImg" src="Images/rome1.jpg" style="width: 100%"></th>
+        <th style="width:18%"><img class = "myImages" id="myImg" src="Images/rome2.jpg" style="width: 100%"></th>
+        <th style="width:8%"><img class = "myImages" id="myImg" src="Images/rome3.jpg" style="width: 100%"></th>
+        <th style="width:17%"><img class = "myImages" id="myImg" src="Images/rome4.jpg" style="width: 100%"></th>
+        <th style="width:43.5%" rowspan="3"><img class = "myImages" id="myImg" src="Images/rome11.jpg" style="width: 100%"></th>
+    </tr>
+    <tr>
+        <td class="nest" colspan="4">
+            <table style="width: 100%" cellspacing="0" cellpadding="0" border="0">
+                <th style="width:11.1%"><img class = "myImages" id="myImg" src="Images/rome5.jpg" style="width: 100%"></th>
+                <th style="width:24.9%"><img class = "myImages" id="myImg" src="Images/rome6.jpg" style="width: 100%"></th>
+                <th style="width:11.1%"><img class = "myImages" id="myImg" src="Images/rome7.jpg" style="width: 100%"></th>
+                <th style="width:11.1%"><img class = "myImages" id="myImg" src="Images/rome3.jpg" style="width: 100%"></th>
+            </table>
+        </td>
+    </tr>
+    <tr>
+        <td class="nest" colspan="4">
+            <table style="width: 100%" cellspacing="0" cellpadding="0" border="0">
+                <th style="width:25%" colspan="2"><img class = "myImages" id="myImg" src="Images/rome9.jpg" style="width: 100%"></th>
+                <th style="width:25%" colspan="2"><img class = "myImages" id="myImg" src="Images/rome10.jpg" style="width: 100%"></th>
+            </table>
+        </td>
+    </tr>
+</table>
+
 <div id="myModal" class="modal">
 
     <!-- The Close Button -->
