--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="main.css">
-  <title>Title</title>
+  <title>Tiago's Portfolio</title>
+  <link rel="icon" href="Images/ass.png">
   <style>
     .container2 {
       display: block;
