--- a/matte.html
+++ b/matte.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="main.css">
-    <title>Title</title>
+    <title>Tiago's Portfolio</title>
+    <link rel="icon" href="Images/ass.png">
 </head>
 <body bgcolor="#1F1F1F">
 <header class="container" style="display: flex; height: 100px; padding-top: 70px">
