--- a/matte.html
+++ b/matte.html
@@ -45,8 +45,10 @@
         <th style="width:20%"><img class = "myImages" id="myImg" src="Images/berlin2.jpg" style="width: 100%"></th>
     </tr>
 </table>
-
-<table style="padding-top: 50px;padding-bottom: 200px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<div style="text-align: center">
+    <p style="color: #8a8788">ROME, 2021</p>
+</div>
+<table style="padding-top: 10px;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:7.8%"><img class = "myImages" id="myImg" src="Images/rome1.jpg" style="width: 100%"></th>
         <th style="width:18%"><img class = "myImages" id="myImg" src="Images/rome2.jpg" style="width: 100%"></th>
@@ -73,6 +75,73 @@
         </td>
     </tr>
 </table>
+
+<div style="text-align: center">
+    <p style="color: #8a8788">LISBON, 2020</p>
+</div>
+
+<table style="padding-top: 10px;padding-bottom: 100px; border-collapse: collapse; width: 55%" cellspacing="0" cellpadding="0" border="0">
+    <tr>
+        <th style="width:100%" colspan="3"><img class = "myImages" id="myImg" src="Images/lx1.jpg" style="width: 100%"></th>
+    </tr>
+    <tr>
+        <th style="width:33.332%"><img class = "myImages" id="myImg" src="Images/lx2.jpg" style="width: 100%"></th>
+        <th style="width:33.332%"><img class = "myImages" id="myImg" src="Images/lx3.jpg" style="width: 100%"></th>
+        <th style="width:33.332%"><img class = "myImages" id="myImg" src="Images/lx4.jpg" style="width: 100%"></th>
+    </tr>
+</table>
+
+<div class="center3">
+    <img class = "myImages" id="myImg" src="Images/ps.jpg" style="width: 100%">
+</div>
+
+<div style="text-align: center;">
+    <p style="color: #8a8788; font-size: 15px">PHOTOSHOP COMPETITION, 2020</p>
+</div>
+
+<table style="padding-top: 100px;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="15" border="0">
+    <tr>
+        <th style="width:17%"><img class = "myImages" id="myImg" src="Images/gym1.jpg" style="width: 100%"></th>
+        <th style="width:17%"><img class = "myImages" id="myImg" src="Images/gym2.jpg" style="width: 100%"></th>
+        <th style="width:17%"><img class = "myImages" id="myImg" src="Images/gym3.jpg" style="width: 100%"></th>
+        <th style="width:17%"><img class = "myImages" id="myImg" src="Images/gym4.jpg" style="width: 100%"></th>
+    </tr>
+</table>
+
+
+<table style="padding-top: 50px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+    <tr>
+        <th style="width:25%"><img class = "myImages" id="myImg" src="Images/ava1.jpg" style="width: 100%"></th>
+        <th style="width:25%"><img class = "myImages" id="myImg" src="Images/ava3.jpg" style="width: 100%"></th>
+        <th style="width:42%" rowspan="2"><img class = "myImages" id="myImg" src="Images/ava5.jpg" style="width: 100%"></th>
+    </tr>
+    <tr>
+        <th style="width:25%"><img class = "myImages" id="myImg" src="Images/ava4.jpg" style="width: 100%"></th>
+        <th style="width:25%"><img class = "myImages" id="myImg" src="Images/ava2.jpg" style="width: 100%"></th>
+    </tr>
+</table>
+
+
+<table style="padding-top: 100px;width: 60%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+    <tr>
+        <th style="width:32.2%"><img class = "myImages" id="myImg" src="Images/buda.jpg" style="width: 100%"></th>
+        <th style="width: 5px"/>
+        <th style="width:28.6%"><img class = "myImages" id="myImg" src="Images/ams.jpg" style="width: 100%"></th>
+        <th style="width: 5px"/>
+        <th style="width:34.2%"><img class = "myImages" id="myImg" src="Images/antwerp.jpg" style="width: 100%"></th>
+    </tr>
+</table>
+<div style="padding-top: 8px"/>
+<table cellpadding="0" border="0" style="width: 60%">
+    <th style="width:36%"><img class = "myImages" id="myImg" src="Images/chinatown.jpg" style="width: 100%"></th>
+    <th style="width: 2px"/>
+    <th style="width:30.2%"><img class = "myImages" id="myImg" src="Images/lxbuild.jpg" style="width: 100%"></th>
+    <th style="width: 2px"/>
+    <th style="width:30.2%"><img class = "myImages" id="myImg" src="Images/groni.jpg" style="width: 100%"></th>
+</table>
+
+
+
 
 <div id="myModal" class="modal">
 
