--- a/matte.html
+++ b/matte.html
@@ -25,24 +25,67 @@
 <table style="padding-top: 50px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:26.40%">
-            <img class = "myImages" id="myImg" src="Images/fendi.jpg" style="width: 100%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/fendi.jpg" style="width: 100%">
+                <div><p>MILAN, 2021</p></div>
+            </div>
         </th>
-        <th style="width:23.40%"><img class = "myImages" id="myImg" src="Images/tunel.jpg" style="width: 100%"></th>
-        <th style="width:49.8%;" rowspan="2"><img class = "myImages" id="myImg" src="Images/maserati.jpg" style="width: 100%"> </th>
+        <th style="width:23.40%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/tunel.jpg" style="width: 100%">
+                <div><p>ANTWERP, 2021</p></div>
+            </div>
+        </th>
+        <th style="width:49.8%;" rowspan="2">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/maserati.jpg" style="width: 100%">
+                <div><p>ROME, 2021</p></div>
+            </div>
+        </th>
     </tr>
     <tr>
-        <th style="width:50%;" colspan="2"><img class = "myImages" src="Images/eiffel.jpg" style="width: 100%"></th>
+        <th style="width:50%;" colspan="2">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/eiffel.jpg" style="width: 100%">
+                <div><p>PARIS, 2021</p></div>
+            </div>
+        </th>
     </tr>
 
 </table>
 
 <table style="padding-top: 150px;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
-        <th style="width:20%"><img class = "myImages" id="myImg" src="Images/berlin1.jpg" style="width: 100%"></th>
-        <th style="width:20%"><img class = "myImages" id="myImg" src="Images/lisbon1.jpg" style="width: 100%"></th>
-        <th style="width:20%"><img class = "myImages" id="myImg" src="Images/vans.jpg" style="width: 100%"></th>
-        <th style="width:20%"><img class = "myImages" id="myImg" src="Images/lisbon2.jpg" style="width: 100%"></th>
-        <th style="width:20%"><img class = "myImages" id="myImg" src="Images/berlin2.jpg" style="width: 100%"></th>
+        <th style="width:20%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/berlin1.jpg" style="width: 100%">
+                <div><p>BERLIN, 2021</p></div>
+            </div>
+        </th>
+        <th style="width:20%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/lisbon1.jpg" style="width: 100%">
+                <div><p>LISBON, 2020</p></div>
+            </div>
+        </th>
+        <th style="width:20%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/vans.jpg" style="width: 100%">
+                <div><p>LISBON, 2020</p></div>
+            </div>
+        </th>
+        <th style="width:20%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/lisbon2.jpg" style="width: 100%">
+                <div><p>LISBON, 2020</p></div>
+            </div>
+        </th>
+        <th style="width:20%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/berlin2.jpg" style="width: 100%">
+                <div><p>BERLIN, 2021</p></div>
+            </div>
+        </th>
     </tr>
 </table>
 <div style="text-align: center">
@@ -50,27 +93,82 @@
 </div>
 <table style="padding-top: 10px;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
-        <th style="width:7.8%"><img class = "myImages" id="myImg" src="Images/rome1.jpg" style="width: 100%"></th>
-        <th style="width:18%"><img class = "myImages" id="myImg" src="Images/rome2.jpg" style="width: 100%"></th>
-        <th style="width:8%"><img class = "myImages" id="myImg" src="Images/rome3.jpg" style="width: 100%"></th>
-        <th style="width:17%"><img class = "myImages" id="myImg" src="Images/rome4.jpg" style="width: 100%"></th>
-        <th style="width:43.5%" rowspan="3"><img class = "myImages" id="myImg" src="Images/rome11.jpg" style="width: 100%"></th>
+        <th style="width:7.8%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/rome1.jpg" style="width: 100%">
+                <div><p>ROME, 2021</p></div>
+            </div>
+        </th>
+        <th style="width:18%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/rome2.jpg" style="width: 100%">
+                <div><p>ROME, 2021</p></div>
+            </div>
+        </th>
+        <th style="width:8%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/rome3.jpg" style="width: 100%">
+                <div><p>ROME, 2021</p></div>
+            </div>
+        </th>
+        <th style="width:17%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/rome4.jpg" style="width: 100%">
+                <div><p>ROME, 2021</p></div>
+            </div>
+        </th>
+        <th style="width:43.5%" rowspan="3">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/rome11.jpg" style="width: 100%">
+                <div><p>ROME, 2021</p></div>
+            </div>
+        </th>
     </tr>
     <tr>
         <td class="nest" colspan="4">
             <table style="width: 100%" cellspacing="0" cellpadding="0" border="0">
-                <th style="width:11.1%"><img class = "myImages" id="myImg" src="Images/rome5.jpg" style="width: 100%"></th>
-                <th style="width:24.9%"><img class = "myImages" id="myImg" src="Images/rome6.jpg" style="width: 100%"></th>
-                <th style="width:11.1%"><img class = "myImages" id="myImg" src="Images/rome7.jpg" style="width: 100%"></th>
-                <th style="width:11.1%"><img class = "myImages" id="myImg" src="Images/rome3.jpg" style="width: 100%"></th>
+                <th style="width:11.1%">
+                    <div class="content_img">
+                        <img class = "myImages" id="myImg" src="Images/rome5.jpg" style="width: 100%">
+                        <div><p>ROME, 2021</p></div>
+                    </div>
+                </th>
+                <th style="width:24.9%">
+                    <div class="content_img">
+                        <img class = "myImages" id="myImg" src="Images/rome6.jpg" style="width: 100%">
+                        <div><p>ROME, 2021</p></div>
+                    </div>
+                </th>
+                <th style="width:11.1%">
+                    <div class="content_img">
+                        <img class = "myImages" id="myImg" src="Images/rome7.jpg" style="width: 100%">
+                        <div><p>ROME, 2021</p></div>
+                    </div>
+                </th>
+                <th style="width:11.1%">
+                    <div class="content_img">
+                        <img class = "myImages" id="myImg" src="Images/rome3.jpg" style="width: 100%">
+                        <div><p>ROME, 2021</p></div>
+                    </div>
+                </th>
             </table>
         </td>
     </tr>
     <tr>
         <td class="nest" colspan="4">
             <table style="width: 100%" cellspacing="0" cellpadding="0" border="0">
-                <th style="width:25%" colspan="2"><img class = "myImages" id="myImg" src="Images/rome9.jpg" style="width: 100%"></th>
-                <th style="width:25%" colspan="2"><img class = "myImages" id="myImg" src="Images/rome10.jpg" style="width: 100%"></th>
+                <th style="width:25%" colspan="2">
+                    <div class="content_img">
+                        <img class = "myImages" id="myImg" src="Images/rome9.jpg" style="width: 100%">
+                        <div><p>ROME, 2021</p></div>
+                    </div>
+                </th>
+                <th style="width:25%" colspan="2">
+                    <div class="content_img">
+                        <img class = "myImages" id="myImg" src="Images/rome10.jpg" style="width: 100%">
+                        <div><p>ROME, 2021</p></div>
+                    </div>
+                </th>
             </table>
         </td>
     </tr>
@@ -111,33 +209,86 @@
 
 <table style="padding-top: 50px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
-        <th style="width:25%"><img class = "myImages" id="myImg" src="Images/ava1.jpg" style="width: 100%"></th>
-        <th style="width:25%"><img class = "myImages" id="myImg" src="Images/ava3.jpg" style="width: 100%"></th>
-        <th style="width:42%" rowspan="2"><img class = "myImages" id="myImg" src="Images/ava5.jpg" style="width: 100%"></th>
+        <th style="width:25%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/ava1.jpg" style="width: 100%">
+                <div><p>ROME, 2021</p></div>
+            </div>
+        </th>
+        <th style="width:25%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/ava3.jpg" style="width: 100%">
+                <div><p>PORTIMÃO, 2022</p></div>
+            </div>
+        </th>
+        <th style="width:42%" rowspan="2">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/ava5.jpg" style="width: 100%">
+                <div><p>PORTIMÃO, 2022</p></div>
+            </div>
+        </th>
     </tr>
     <tr>
-        <th style="width:25%"><img class = "myImages" id="myImg" src="Images/ava4.jpg" style="width: 100%"></th>
-        <th style="width:25%"><img class = "myImages" id="myImg" src="Images/ava2.jpg" style="width: 100%"></th>
+        <th style="width:25%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/ava4.jpg" style="width: 100%">
+                <div><p>PORTIMÃO, 2022</p></div>
+            </div>
+        </th>
+        <th style="width:25%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/ava2.jpg" style="width: 100%">
+                <div><p>ROME, 2021</p></div>
+            </div>
+        </th>
     </tr>
 </table>
 
 
 <table style="padding-top: 100px;width: 60%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
-        <th style="width:32.2%"><img class = "myImages" id="myImg" src="Images/buda.jpg" style="width: 100%"></th>
+        <th style="width:32.2%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/buda.jpg" style="width: 100%">
+                <div><p>BUDAPEST, 2021</p></div>
+            </div>
+        </th>
         <th style="width: 5px"/>
-        <th style="width:28.6%"><img class = "myImages" id="myImg" src="Images/ams.jpg" style="width: 100%"></th>
+        <th style="width:28.6%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/ams.jpg" style="width: 100%">
+                <div><p>AMSTERDAM, 2021</p></div>
+            </div>
+        </th>
         <th style="width: 5px"/>
-        <th style="width:34.2%"><img class = "myImages" id="myImg" src="Images/antwerp.jpg" style="width: 100%"></th>
+        <th style="width:34.2%"><div class="content_img">
+            <img class = "myImages" id="myImg" src="Images/antwerp.jpg" style="width: 100%">
+            <div><p>ANTWERP, 2021</p></div>
+        </div></th>
     </tr>
 </table>
 <div style="padding-top: 8px"/>
-<table cellpadding="0" border="0" style="width: 60%">
-    <th style="width:36%"><img class = "myImages" id="myImg" src="Images/chinatown.jpg" style="width: 100%"></th>
+<table cellpadding="0" border="0" style="width: 60%; padding-bottom: 200px" >
+    <th style="width:36%">
+        <div class="content_img">
+            <img class = "myImages" id="myImg" src="Images/chinatown.jpg" style="width: 100%">
+            <div><p>ANTWERP, 2021</p></div>
+        </div>
+    </th>
     <th style="width: 2px"/>
-    <th style="width:30.2%"><img class = "myImages" id="myImg" src="Images/lxbuild.jpg" style="width: 100%"></th>
+    <th style="width:30.2%">
+        <div class="content_img">
+            <img class = "myImages" id="myImg" src="Images/lxbuild.jpg" style="width: 100%">
+            <div><p>LISBON, 2020</p></div>
+        </div>
+    </th>
     <th style="width: 2px"/>
-    <th style="width:30.2%"><img class = "myImages" id="myImg" src="Images/groni.jpg" style="width: 100%"></th>
+    <th style="width:30.2%">
+        <div class="content_img">
+            <img class = "myImages" id="myImg" src="Images/groni.jpg" style="width: 100%">
+            <div><p>GRONINGEN, 2021</p></div>
+        </div>
+    </th>
 </table>
 
 
