--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
         outline: none;
         border: 0px;
         font-family: 'bebas_kairegular';
+        color: #FFFFFF;
         font-weight: lighter;
         font-size: 15px;
         resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
