--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
         outline: none;
         border: 0px;
         font-family: 'bebas_kairegular';
-        color: #FFFFFF;
+        color: #FFFFFF;=-
         font-weight: lighter;
         font-size: 15px;
         resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
@@ -71,7 +71,7 @@
     <p STYLE="font-size: 35px; color: #FFFFFF; font-weight: 100; line-height: 0.5">CONTACT</p>
 </div>
 <div class="container3">
-    <form action="forms.php" method="post">
+    <form action="forms.php" method="get">
 
         <label for="name">Name</label>
         <input type="text" id="name" name="NAME" placeholder="YOUR NAME...">
