--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
     <p STYLE="font-size: 35px; color: #FFFFFF; font-weight: 100; line-height: 0.5">CONTACT</p>
 </div>
 <div class="container3">
-    <form action="forms.php" method="get">
+    <form action="forms.php" method="POST">
 
         <label for="name">Name</label>
         <input type="text" id="name" name="NAME" placeholder="YOUR NAME...">
