--- a/index.html
+++ b/index.html
@@ -51,8 +51,14 @@
 <body bgcolor="#1F1F1F">
 <header class="container" style="display: flex; height: 100px; padding-top: 70px">
   <div style="width: 33.3332%; text-align: left; padding-top: 30px">
-    <a href="index.html"style="padding-left: 100px"> WORK </a></td>
-    <a href="contact.html" style="padding-left: 20px"> CONTACT </a>
+    <table>
+      <td style="width: 50%">
+        <a href="index.html"style="padding-left: 100px"> WORK </a>
+      </td>
+      <td style="width: 50%; padding-left: 10px; padding-top: 5px">
+        <a href = "mailto: tiagofc2000@gmail.com"><img class = "myImages" id="myImg" src="Images/mail.png" style="width: 27px;"></a>
+      </td>
+    </table>
   </div>
   <div style="flex-grow: 1; width: 33.3332%; padding-top: 0px">
     <a><img src="Images/Signature.png" class ="center"> </a>
