--- a/matte.html
+++ b/matte.html
@@ -9,14 +9,8 @@
 <body bgcolor="#1F1F1F">
 <header class="container" style="display: flex; height: 100px; padding-top: 70px">
     <div style="width: 33.3332%; text-align: left; padding-top: 30px">
-        <table>
-            <td style="width: 50%">
-                <a href="index.html"style="padding-left: 100px"> WORK </a>
-            </td>
-            <td style="width: 50%; padding-left: 10px; padding-top: 5px">
-                <a href = "mailto: tiagofc2000@gmail.com"><img class = "myImages" id="myImg" src="Images/mail.png" style="width: 27px;"></a>
-            </td>
-        </table>
+        <a href="index.html" style="padding-left: 100px"> WORK </a></td>
+        <a href="contact.html" style="padding-left: 20px"> CONTACT </a>
     </div>
     <div style="flex-grow: 1; width: 33.3332%; padding-top: 0px">
         <a><img src="Images/Signature.png" class ="center"> </a>
@@ -186,12 +180,32 @@
 
 <table style="padding-top: 10px;padding-bottom: 100px; border-collapse: collapse; width: 55%" cellspacing="0" cellpadding="0" border="0">
     <tr>
-        <th style="width:100%" colspan="3"><img class = "myImages" id="myImg" src="Images/lx1.jpg" style="width: 100%"></th>
+        <th style="width:100%" colspan="3">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/lx1.jpg" style="width: 100%">
+                <div><p>LISBON, 2020</p></div>
+            </div>
+        </th>
     </tr>
     <tr>
-        <th style="width:33.332%"><img class = "myImages" id="myImg" src="Images/lx2.jpg" style="width: 100%"></th>
-        <th style="width:33.332%"><img class = "myImages" id="myImg" src="Images/lx3.jpg" style="width: 100%"></th>
-        <th style="width:33.332%"><img class = "myImages" id="myImg" src="Images/lx4.jpg" style="width: 100%"></th>
+        <th style="width:33.332%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/lx2.jpg" style="width: 100%">
+                <div><p>LISBON, 2020</p></div>
+            </div>
+        </th>
+        <th style="width:33.332%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/lx3.jpg" style="width: 100%">
+                <div><p>LISBON, 2020</p></div>
+            </div>
+        </th>
+        <th style="width:33.332%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/lx4.jpg" style="width: 100%">
+                <div><p>LISBON, 2020</p></div>
+            </div>
+        </th>
     </tr>
 </table>
 
