--- a/matte.html
+++ b/matte.html
@@ -14,7 +14,7 @@
                 <a href="index.html"style="padding-left: 100px"> WORK </a>
             </td>
             <td style="width: 50%; padding-left: 10px; padding-top: 5px">
-                <a href = "mailto: tiagofc2000@gmail.com"><img class = "myImages" id="myImg" src="Images/mail.png" style="width: 27px;"></a>
+                <a href = "mailto: tiagofc2000@gmail.com"><img class = "myImages"  src="Images/mail.png" style="width: 27px;"></a>
             </td>
         </table>
     </div>
