--- a/matte.html
+++ b/matte.html
@@ -13,8 +13,8 @@
             <td style="width: 50%">
                 <a href="index.html"style="padding-left: 100px"> WORK </a>
             </td>
-            <td style="width: 50%; padding-left: 10px; padding-top: 5px">
-                <a href = "mailto: tiagofc2000@gmail.com"><img class = "myImages"  src="Images/mail.png" style="width: 27px;"></a>
+            <td style="width: 50%; padding-left: 10px; padding-top: 4px">
+                <a href = "mailto: tiagofc2000@gmail.com"><img class = "myImages"  src="Images/mail2.png" style="width: 25px;"></a>
             </td>
         </table>
     </div>
