--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="main.css">
   <title>Tiago's Portfolio</title>
-  <link rel="icon" href="Images/ass.png">
+  <link rel="icon" href="Images/ass2.png">
   <style>
     .container2 {
       display: block;
