--- a/matte.html
+++ b/matte.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="main.css">
     <title>Tiago's Portfolio</title>
-    <link rel="icon" href="Images/ass.png">
+    <link rel="icon" href="Images/ass2.png">
 </head>
 <body bgcolor="#1F1F1F">
 <header class="container" style="display: flex; height: 100px; padding-top: 70px">
