--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </header>
 <div style="padding-top: 100px"></div>
 <div class="container2">
-  <img src="Images/ass.png" alt="" class="image">
+  <img src="Images/ass2.png" alt="" class="image">
   <a href="matte.html">
     <div class="overlay">
       <div class="text2">
