--- a/matte.html
+++ b/matte.html
@@ -33,7 +33,7 @@
         <th style="width:26.40%">
             <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/fendi.jpg" style="width: 100%">
-                <div><p>MILAN, 2021</p></div>
+                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:23.40%">
@@ -94,9 +94,7 @@
         </th>
     </tr>
 </table>
-<div style="text-align: center">
-    <p style="color: #8a8788">ROME, 2021</p>
-</div>
+
 <table style="padding-top: 10px;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:7.8%">
