--- a/matte.html
+++ b/matte.html
@@ -19,7 +19,7 @@
         </table>
     </div>
     <div style="flex-grow: 1; width: 33.3332%; padding-top: 0px">
-        <a><img src="Images/Signature.png" class ="center"> </a>
+        <a href="index.html"><img src="Images/Signature.png" class ="center"> </a>
     </div>
     <div style="flex-grow: 1;width: 33.3332%">
     </div>
