--- a/bold.html
+++ b/bold.html
@@ -26,7 +26,7 @@
 </header>
 <div style="text-align: center; padding-top: 30px " >
     <p STYLE="font-size: 35px; color: #FFFFFF; font-weight: 100; line-height: 0.5">BOLD</p>
-    <p STYLE="color: #8a8788; font-size: 20px;line-height: 1"> THE Ability to take risks </p>
+    <p STYLE="color: #8a8788; font-size: 20px;line-height: 1"> /bəʊld/ 1. showing a willingness to take risks; confident and courageous.</p>
 </div>
 <table style="padding-top: 50px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
@@ -147,7 +147,7 @@
     </tr>
 </table>
 
-<table style="padding-top: 50px;padding-bottom: 300px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 100px;padding-bottom: 0px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:20%">
             <div class="content_img">
@@ -176,9 +176,78 @@
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
-        <th style="width:1%"></th>
     </tr>
 </table>
+<table style="padding-top: 2px;">
+    <tr>
+        <th style="width:67%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/white6.jpg" style="width: 100%">
+                <div class="content_img"><p>MILAN, 2021</p></div>
+            </div>
+        </th>
+        <th style="width:0.5%"></th>
+        <th style="width:30%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/white5.jpg" style="width: 100%">
+                <div class="content_img"><p>MILAN, 2021</p></div>
+            </div>
+        </th>
+    </tr>
+</table>
+
+<table style="padding-top: 100px;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+    <tr>
+        <th style="width:16.66%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/out1.jpg" style="width: 100%">
+                <div class="content_img"><p>MILAN, 2021</p></div>
+            </div>
+        </th>
+        <th style="width:16.66%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/out2.jpg" style="width: 100%">
+                <div class="content_img"><p>MILAN, 2021</p></div>
+            </div>
+        </th>
+        <th style="width:16.66%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/out3.jpg" style="width: 100%">
+                <div class="content_img"><p>MILAN, 2021</p></div>
+            </div>
+        </th>
+        <th style="width:16.66%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/out4.jpg" style="width: 100%">
+                <div class="content_img"><p>MILAN, 2021</p></div>
+            </div>
+        </th>
+
+        <th style="width:16.66%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/out5.jpg" style="width: 100%">
+                <div class="content_img"><p>MILAN, 2021</p></div>
+            </div>
+        </th>
+        <th style="width:14.9%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/out6.jpg" style="width: 100%">
+                <div class="content_img"><p>MILAN, 2021</p></div>
+            </div>
+        </th>
+    </tr>
+    <tr>
+        <th colspan="6">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/pano.jpg" style="width: 100%">
+                <div class="content_img"><p>MILAN, 2021</p></div>
+            </div>
+        </th>
+    </tr>
+</table>
+<div style="text-align: center; padding-top: 30px;padding-bottom: 300px; " >
+    <p STYLE="font-size: 35px; color: #FFFFFF; font-weight: 100; line-height: 0.5; opacity: 0.8">Thank you!</p>
+</div>
 
 
 
