--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <header class="container" style="display: flex; height: 100px; padding-top: 70px">
   <div style="width: 33.3332%; text-align: left; padding-top: 30px">
     <a href="index.html"style="padding-left: 100px"> WORK </a></td>
-    <a href="contact.html" style="padding-left: 20px"> CONTACT </a>
+    <a href = "mailto: tiagofc2000@gmail.com" style="padding-left: 20px"> CONTACT </a>
   </div>
   <div style="flex-grow: 1; width: 33.3332%; padding-top: 0px">
     <a href="index.html"><img src="Images/Signature.png" class ="center"> </a>
