--- a/bold.html
+++ b/bold.html
@@ -239,7 +239,7 @@
     <tr>
         <th colspan="6">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/pano.jpeg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/pano.jpg" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
