--- a/bold.html
+++ b/bold.html
@@ -14,7 +14,7 @@
                 <a href="index.html"style="padding-left: 100px"> WORK </a>
             </td>
             <td style="width: 50%; padding-left: 10px; padding-top: 4px">
-                <a href = "mailto: tiagofc2000@gmail.com">Contact</a>
+                <a href = "mailto: info@tfcoelho.com">Contact</a>
             </td>
         </table>
     </div>
